--- a/SupermarketManagement.DataStore.SQL/SupermarketManagement.DataStore.SQL.csproj
+++ b/SupermarketManagement.DataStore.SQL/SupermarketManagement.DataStore.SQL.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,8 +20,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SupermarketManagement.DataStore.InMemory\SupermarketManagement.DataStore.InMemory.csproj" />
-    <ProjectReference Include="..\SupermarketManagement.DataStore.SQL\SupermarketManagement.DataStore.SQL.csproj" />
     <ProjectReference Include="..\SupermarketManagement.Entities\SupermarketManagement.Entities.csproj" />
     <ProjectReference Include="..\SupermarketManagement.UseCases\SupermarketManagement.UseCases.csproj" />
   </ItemGroup>
