--- a/SupermarketManagement.WebApp/appsettings.Development.json
+++ b/SupermarketManagement.WebApp/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=SupermarketManagement;Integrated Security=True"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
