--- a/SupermarketManagement.UseCases/SupermarketManagement.UseCases.csproj
+++ b/SupermarketManagement.UseCases/SupermarketManagement.UseCases.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Configurations>Debug;Release;WithoutInMemory</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
