--- a/SupermarketManagement.WebApp/SupermarketManagement.WebApp.csproj
+++ b/SupermarketManagement.WebApp/SupermarketManagement.WebApp.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Configurations>Debug;Release;WithoutInMemory</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SupermarketManagement.DataStore.InMemory\SupermarketManagement.DataStore.InMemory.csproj" />
     <ProjectReference Include="..\SupermarketManagement.DataStore.SQL\SupermarketManagement.DataStore.SQL.csproj" />
     <ProjectReference Include="..\SupermarketManagement.Entities\SupermarketManagement.Entities.csproj" />
     <ProjectReference Include="..\SupermarketManagement.UseCases\SupermarketManagement.UseCases.csproj" />
