--- a/SupermarketManagement.WebApp/appsettings.Development.json
+++ b/SupermarketManagement.WebApp/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=SupermarketManagement;Integrated Security=True"
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=SupermarketManagement;Integrated Security=True",
+    "AccountContextConnection": "Server=(LocalDB)\\MSSQLLocalDB;Initial Catalog=WebApp_Accounts;Integrated Security=True"
   },
   "DetailedErrors": true,
   "Logging": {
