Created tests for CategoriesUseCases

--- a/SupermarketManagement.Tests/SupermarketManagement.Tests.csproj
+++ b/SupermarketManagement.Tests/SupermarketManagement.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -33,9 +33,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="CategoriesUseCases\" />
     <Folder Include="ProductsUseCases\" />
     <Folder Include="TransactionsUseCases\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
