--- a/SupermarketManagement.WebApp/appsettings.json
+++ b/SupermarketManagement.WebApp/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "workstation id=bobpavlovbd.mssql.somee.com;packet size=4096;user id=bob_pavlov_SQLLogin_1;pwd=kh5qewdgka;data source=bobpavlovbd.mssql.somee.com;persist security info=False;initial catalog=bobpavlovbd"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"  
+  "AllowedHosts": "*"
 }
