Added MySQL db.

--- a/SupermarketManagement.WebApp/appsettings.Development.json
+++ b/SupermarketManagement.WebApp/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=SupermarketManagement;Integrated Security=True",
+    "SqlServerConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=SupermarketManagement;Integrated Security=True",
+    "MySQLConnection": "server=localhost;user=root;password=adminBob1979;database=SupermarketManagementDB;",
     "AccountContextConnection": "Server=(LocalDB)\\MSSQLLocalDB;Initial Catalog=WebApp_Accounts;Integrated Security=True"
   },
   "DetailedErrors": true,
