Changed migration for MySQL. Bug fix. Code cleanup.

--- a/SupermarketManagement.DataStore.MySQL/SupermarketManagement.DataStore.MySQL.csproj
+++ b/SupermarketManagement.DataStore.MySQL/SupermarketManagement.DataStore.MySQL.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\SupermarketManagement.UseCases\SupermarketManagement.UseCases.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
