--- a/SupermarketManagement.WebApp/appsettings.json
+++ b/SupermarketManagement.WebApp/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "workstation id=bobpavlovbd.mssql.somee.com;packet size=4096;user id=bob_pavlov_SQLLogin_1;pwd=kh5qewdgka;data source=bobpavlovbd.mssql.somee.com;persist security info=False;initial catalog=bobpavlovbd"
+    "SqlServerConnection": "",
+    "MySQLConnection": "",
+    "AccountContextConnection": ""
   },
   "Logging": {
     "LogLevel": {
