--- a/SupermarketManagement.WebApp/appsettings.json
+++ b/SupermarketManagement.WebApp/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
     "SqlServerConnection": "",
-    "Default Connection": "Server=MYSQL8002.site4now.net;Database=db_a8bcb4_boba34;Uid=a8bcb4_boba34;Pwd=adminBP34",
-    "AccountContextConnection": "Data Source=SQL8004.site4now.net;Initial Catalog=db_a8bcb4_boba34;User Id=db_a8bcb4_boba34_admin;Password=adminBP34"
+    "Default Connection": "",
+    "AccountContextConnection": ""
   },
   "Logging": {
     "LogLevel": {
